# netbox-zabbix-sync

./: .gitignore  netbox_zabbix_sync.py  pyproject.toml  requirements.txt
modules/: device.py  virtual_machine.py
