[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modules"
version = "0.1.0"
description = "A simple Python package"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = []

[tool.setuptools]
packages = ["modules"]
